final update + add ressources (image for help)